Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96580

Missing documentation for QSGRenderNode::RenderState

XMLWordPrintable

    • b2a74e4cb (dev), 828de0b78 (6.9), 094991ba7 (tqtc/lts-6.8), 4d992706b (tqtc/lts-6.5)
    • framework-content 8, framework-content 9, framework-content 10, framework-content 11

      The documentation for `QSGRenderNode` mentions `QSGRenderNode::RenderState` as a parameter type in `QSGRenderNode::render` and as part of the documentation for `QSGRenderNode::RenderingFlag::DepthAwareRendering`.

      Nonetheless, the class documentation for `QSGRenderNode::RenderState` is missing, resulting in a linking failure.

      In `qtdeclarative/src/quick/scenegraph/coreapi/qsgrendernode.cpp` the documentation for `QSGRenderNode` methods seems to be present, but a class topic documentation block seems to be missing.

      A possibly similar element is documented in QSGMaterialShader::RenderState and it might be possible to use it as a basic template.

        For Gerrit Dashboard: QTBUG-96580
        # Subject Branch Project Status CR V

            andreas.eliasson Andreas Eliasson
            diseraluca Luca Di Sera
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes