Doc: Document QSGRenderNode::RenderState

The class documentation for QSGRenderNode::RenderState is
missing, which results in failed links to its functions.

Fixes: QTBUG-96580
Pick-to: 6.8 6.5
Change-Id: I546c3f499a07096e00714296a1c0c0ffd2f6ea98
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit b2a74e4cb770eaf99923e4525dfd2a207c109f7b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>